reset css file and css style

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <meta name="description" content="Pickst is a name picker website created by Anis Baloch that allows you to randomly select names for various purposes, Try our random name generator today!">
 
     <title>Pickist</title>
+    <link rel="stylesheet" href="assets/css/reset.css" />
+
 </head>
 <body>
     
+    <link rel="stylesheet" href="assets/css/style.css">
 </body>
 </html>
